src/test/ui/traits/trait-bounds-on-structs-and-enums.stderr
error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:13:9
   |
LL | struct Foo<T:Trait> {
   |              ----- required by this bound in `Foo`
...
LL | impl<T> Foo<T> {
   |         ^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | impl<T: Trait> Foo<T> {
   |       ^^^^^^^

error[E0277]: the trait bound `isize: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:19:5
   |
LL | struct Foo<T:Trait> {
   |              ----- required by this bound in `Foo`
...
LL |     a: Foo<isize>,
   |     ^^^^^^^^^^^^^ the trait `Trait` is not implemented for `isize`

error[E0277]: the trait bound `usize: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:23:10
   |
LL | enum Bar<T:Trait> {
   |            ----- required by this bound in `Bar`
...
LL |     Quux(Bar<usize>),
   |          ^^^^^^^^^^ the trait `Trait` is not implemented for `usize`

error[E0277]: the trait bound `U: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:27:5
   |
LL | struct Foo<T:Trait> {
   |              ----- required by this bound in `Foo`
...
LL |     b: Foo<U>,
   |     ^^^^^^^^^ the trait `Trait` is not implemented for `U`
   |
help: consider restricting type parameter `U`
   |
LL | struct Badness<U: Trait> {
   |                 ^^^^^^^

error[E0277]: the trait bound `V: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:31:21
   |
LL | enum Bar<T:Trait> {
   |            ----- required by this bound in `Bar`
...
LL |     EvenMoreBadness(Bar<V>),
   |                     ^^^^^^ the trait `Trait` is not implemented for `V`
   |
help: consider restricting type parameter `V`
   |
LL | enum MoreBadness<V: Trait> {
   |                   ^^^^^^^

error[E0277]: the trait bound `i32: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:35:5
   |
LL | struct Foo<T:Trait> {
   |              ----- required by this bound in `Foo`
...
LL |     Foo<i32>,
   |     ^^^^^^^^ the trait `Trait` is not implemented for `i32`

error[E0277]: the trait bound `u8: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums.rs:39:22
   |
LL | enum Bar<T:Trait> {
   |            ----- required by this bound in `Bar`
...
LL |     DictionaryLike { field: Bar<u8> },
   |                      ^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `u8`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
